--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,7 @@ body {
 .links {
     margin-top: 5rem;
 }
+
 @media screen and (max-width: 480px) {
     .links {
         margin-top: 10rem;
@@ -67,8 +68,16 @@ body {
     font-weight: 650;
 }
 
-.detail-img {
-    margin-top: 3rem;
+@media screen and (min-width: 768px) {
+    .detail-img {
+        transform: translateY(50%);
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .detail-img {
+        margin-top: 3rem;
+    }
 }
 
 .details {
@@ -91,7 +100,14 @@ ul {
     margin: 5rem 1.5rem 4rem 1.5rem;
     text-decoration: none;
     padding: 1.0rem 1.5rem;
-    border-radius: 2rem;
+    border-radius: 1.5rem;
+}
+
+@media screen and (max-width: 480px) {
+    .detail-links {
+        width: 40%;
+        border-radius: 1rem;
+    }
 }
 
 .detail-links:hover {
@@ -99,14 +115,20 @@ ul {
 }
 
 .row {
+    display: inline-block;
+    text-align: center;
     background-color: #fff;
     border-top: #000 1rem solid;
+    max-width: 1000px;    
 }
 
-/* show reverse by horizontal row */
-.row-reverse { 
-    display: flex; 
-    flex-direction: row-reverse; 
+@media screen and (min-width: 768px) {
+    /* show reverse by horizontal row */
+    .row-reverse { 
+        display: inline-flex; 
+        flex-direction: row-reverse; 
+        padding: 1rem;
+    }
 }
 
 /* Add a gray background color and some padding to the footer */
