--- a/css/style.css
+++ b/css/style.css
@@ -74,6 +74,13 @@ body {
     font-weight: 540;
 }
 
+/* Auto-resize image */
+.detail-img {
+    max-width: 100%;
+    height: auto;
+    width: auto;
+}
+
 @media screen and (min-width: 768px) {
     .detail-img {
         transform: translateY(50%);
@@ -85,6 +92,22 @@ body {
         margin-top: 3rem;
     }
 }
+
+.video-container {
+    position: relative;
+    padding-bottom: 56.25%;
+    padding-top: 30px; height: 0; overflow: hidden;
+    }
+    
+.video-container iframe,
+.video-container object,
+.video-container embed {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    }
 
 .details {
     font-size: 1.4rem;
@@ -127,20 +150,20 @@ ul {
     text-align: center;
     background-color: #fff;
     margin-top: 3rem;
-    max-width: 90%;
+    width: 90%;
 }
 
 @media screen and (max-width: 768px) {
     /* show reverse by horizontal row */
     .row {
-        max-width: 95%;
+        width: 95%;
     }
 }
 
 @media screen and (max-width: 400px) {
     /* show reverse by horizontal row */
     .row {
-        max-width: 98%;
+        width: 98%;
     }
 }
 
