--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,14 @@ body {
     border: 2px solid red;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 768px) {
+    .intro-links {
+        width: 30%;
+        margin: 1.2rem;
+    }
+}
+
+@media screen and (max-width: 520px) {
     .intro-links {
         width: 70%;
         margin: 1.2rem;
@@ -79,7 +86,7 @@ body {
 .detail-img {
     max-width: 100%;
     height: auto;
-    width: auto;
+    width: 40rem;
 }
 
 @media screen and (min-width: 768px) {
