--- a/css/style.css
+++ b/css/style.css
@@ -210,6 +210,16 @@ ul {
     }
 }
 
+.skill-sep {
+    padding: 0 3rem;
+}
+
+@media screen and (max-width: 768px) {
+    .skill-sep {
+        padding: 0 1.5rem;
+    }
+}
+
 .progress {
     background-color: rgb(241, 231, 229);
 }
