--- a/css/style.css
+++ b/css/style.css
@@ -85,6 +85,7 @@ a:visited {
 }
 
 .headings {
+    margin-top: 1rem;
     background-color: rgb(109, 85, 53);
     font-weight: 650;
     padding: 1.5rem;
@@ -262,6 +263,30 @@ ul {
     padding: 1rem;
     margin-top: 3rem;
     margin-bottom: 3rem;
+    height: 40rem;
+}
+
+@media screen and (max-width: 768px) {
+    .card-box {
+        height: initial;
+    }
+}
+
+/* Text overflow ellipsis after 4 lines */
+.ellipsis {
+    padding: 0 1rem;
+    text-align: justify;
+    -webkit-line-clamp: 4;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+@media screen and (max-width: 480px) {
+    .ellipsis {
+        -webkit-line-clamp: 6;
+    }
 }
 
 .card-box a {
