--- a/css/style.css
+++ b/css/style.css
@@ -13,26 +13,57 @@ body {
 
 @media screen and (max-width: 480px) {
     .navbar {
-        background-color: rgba(0,0,0,0.3);
+        background-color: rgba(60, 47, 29, 0.7);
     }
 }
 
 .navbar.scrolled {
-    background-color: rgb(238, 231, 210) !important;
+    background-color: #3C2F1D !important;
     transition: background-color 200ms linear;
 }
 
 .navbar-toggle {
-    border: #000 1px solid;
+    border: #fff 1px solid;
+}
+
+.navbar a {
+    color: #fff;
+}
+
+/* Change bgcolor and font color on navbar hover */
+.navbar-nav > li > a:hover,.navbar-nav > li > a:focus {
+    background-color: #d1b289;
+    color: #3C2F1D;
 }
 
 .icon-bar {
-    background-color: #000;
+    background-color: #fff;
+}
+
+#particles-js canvas {
+    display: block;
+    -webkit-transform: scale(1);
+    -ms-transform: scale(1);
+    transform: scale(1);
+    opacity: 1;
+    -webkit-transition: opacity .8s ease, -webkit-transform 1.4s ease;
+    transition: opacity .8s ease, transform 1.4s ease
+}
+
+#particles-js {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    /* z-index: -1; */
+    top: 0;
+    left: 0
 }
 
 .jumbotron {
     height: 100vh;
     padding-top: 25vh;
+    background-color: #3C2F1D;
+    color: #fff;
 }
 
 /* Default 'a' text decoration turned off */
@@ -49,6 +80,7 @@ a:visited {
 }
 
 .links {
+    position: relative;
     margin-top: 5rem;
 }
 
@@ -66,8 +98,9 @@ a:visited {
     margin: 3rem 1.5rem;
     /* text-decoration: none; */
     padding: 1.0rem 1.5rem;
-    color: #000;
-    border: 2px solid red;
+    color: #fff;
+    border: 2px solid #ddd;
+    /* z-index: 10002; */
 }
 
 @media screen and (max-width: 768px) {
@@ -82,6 +115,14 @@ a:visited {
         width: 70%;
         margin: 1.2rem;
     }
+}
+
+.intro-links:hover {
+    color: #fff;
+}
+
+.intro-links:visited {
+    color: #fff;
 }
 
 .headings {
