--- a/css/style.css
+++ b/css/style.css
@@ -64,6 +64,7 @@ body {
     padding-top: 25vh;
     background-color: #3C2F1D;
     color: #fff;
+    font-family: 'Bree Serif'
 }
 
 /* Default 'a' text decoration turned off */
@@ -130,14 +131,16 @@ a:visited {
 .headings {
     margin-top: 1rem;
     background-color: rgb(109, 85, 53);
-    font-weight: 650;
+    font-weight: 575;
     padding: 1.5rem;
     color: #e5e5e5;
     text-align: center;
+    font-family: 'Bree Serif'
 }
 
 .sub-headings {
     font-weight: 540;
+    font-family: 'Maiden Orange';
 }
 
 /* Auto-resize image */
