--- a/css/style.css
+++ b/css/style.css
@@ -72,11 +72,15 @@ a {
     text-decoration: none;
 }
 
+a:visited {
+    text-decoration: none;
+}
+
 a:hover {
     text-decoration: none;
 }
 
-a:visited {
+a:focus {
     text-decoration: none;
 }
 
@@ -410,5 +414,64 @@ clip-path: polygon(50% 100%, 100% 85%, 100% 100%, 0 100%, 0 85%); */
 footer {
     margin-top: -0.1rem;
     background-color: #3C2F1D;
-    padding: 25px;
+    padding: 0 10rem !important;
+    padding-bottom: 2rem !important;
+    color: #fff;
+}
+
+@media screen and (max-width: 768px) {
+    footer {
+        padding: 3rem 4rem !important;
+    }
+}
+
+footer a {
+    color: #fff;
+    text-decoration: underline;
+}
+
+footer a:visited {
+    color: #ddd;
+}
+
+footer a:hover {
+    color: #eee;
+}
+
+footer a:focus {
+    color: #ddd;
+}
+
+.icon {
+    margin-top: 2rem;
+    margin-right: 2rem;
+    font-size: 2rem;
+}
+
+.about {
+    display: inline-block;
+    width: 40%;
+}
+
+.contact {
+    display: block;
+    width: 35%;
+    float: right;
+}
+
+@media screen and (max-width: 768px) {
+    .about {
+        width: 100%;
+        text-align: center;
+        margin-bottom: 3rem;
+    }
+    
+    .contact {
+        width: 100%;
+        text-align: center;
+    }
+
+    .contact .details {
+        text-align: center;
+    }
 }
