--- a/css/style.css
+++ b/css/style.css
@@ -1,340 +1,343 @@
 body {
-    background-color: rgb(209, 178, 137);
-    font-size: 62.5%;
+  background-color: rgb(209, 178, 137);
+  font-size: 62.5%;
 }
 
-/* Remove the navbar's default margin-bottom and rounded borders */ 
+/* Remove the navbar's default margin-bottom and rounded borders */
 .navbar {
-    margin-bottom: 0;
-    border-radius: 0;
-    background-color: transparent;
-    font-size: 1.4rem;
-    padding-right: 2rem;
+  margin-bottom: 0;
+  border-radius: 0;
+  background-color: transparent;
+  font-size: 1.4rem;
+  padding-right: 2rem;
 }
 
 @media screen and (max-width: 768px) {
-    .navbar {
-        padding-right: initial;
-    }
+  .navbar {
+    padding-right: initial;
+  }
 }
 
 @media screen and (max-width: 480px) {
-    .navbar {
-        background-color: rgba(60, 47, 29, 0.7);
-    }
+  .navbar {
+    background-color: rgba(60, 47, 29, 0.7);
+  }
 }
 
 .navbar.scrolled {
-    background-color: #3C2F1D !important;
-    transition: background-color 200ms linear;
+  background-color: #3c2f1d !important;
+  transition: background-color 200ms linear;
 }
 
 .navbar-toggle {
-    border: #fff 1px solid;
+  border: #fff 1px solid;
 }
 
 .navbar a {
-    color: #fff;
+  color: #fff;
 }
 
 /* Change bgcolor and font color on navbar hover */
-.navbar-nav > li > a:hover,.navbar-nav > li > a:focus {
-    background-color: #d1b289;
-    color: #3C2F1D;
+.navbar-nav > li > a:hover,
+.navbar-nav > li > a:focus {
+  background-color: #d1b289;
+  color: #3c2f1d;
 }
 
 .nav-img {
-    height: 3.8rem;
-    width: auto;
-    border-radius: 50%;
-    border: 1.5px solid #fff;
-    margin: 0.8rem 0 0.8rem 1.5rem;
+  height: 3.8rem;
+  width: auto;
+  border-radius: 50%;
+  border: 1.5px solid #fff;
+  margin: 0.8rem 0 0.8rem 1.5rem;
 }
 
 @media screen and (min-width: 768px) {
-    .nav-img {
-        margin-left: 0;
-    }
+  .nav-img {
+    margin-left: 0;
+  }
 }
 
 .icon-bar {
-    background-color: #fff;
+  background-color: #fff;
 }
 
 #particles-js canvas {
-    display: block;
-    -webkit-transform: scale(1);
-    -ms-transform: scale(1);
-    transform: scale(1);
-    opacity: 1;
-    -webkit-transition: opacity .8s ease, -webkit-transform 1.4s ease;
-    transition: opacity .8s ease, transform 1.4s ease
+  display: block;
+  -webkit-transform: scale(1);
+  -ms-transform: scale(1);
+  transform: scale(1);
+  opacity: 1;
+  -webkit-transition: opacity 0.8s ease, -webkit-transform 1.4s ease;
+  transition: opacity 0.8s ease, transform 1.4s ease;
 }
 
 #particles-js {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    /* z-index: -1; */
-    top: 0;
-    left: 0
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  /* z-index: -1; */
+  top: 0;
+  left: 0;
 }
 
 .jumbotron {
-    height: 100vh;
-    padding-top: 25vh;
-    background-color: #3C2F1D;
-    color: #fff;
-    font-family: 'Bree Serif'
+  height: 100vh;
+  padding-top: 25vh;
+  background-color: #3c2f1d;
+  color: #fff;
+  font-family: "Bree Serif";
 }
 
 /* Default 'a' text decoration turned off */
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 a:visited {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 a:hover {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 a:focus {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 .links {
-    position: relative;
-    margin-top: 5rem;
+  position: relative;
+  margin-top: 5rem;
 }
 
 @media screen and (max-width: 480px) {
-    .links {
-        margin-top: 10rem;
-    }
+  .links {
+    margin-top: 10rem;
+  }
 }
 
 .intro-links {
-    display: inline-block;
-    text-align: center;
-    font-size: 1.4rem;
-    width: 20%;
-    margin: 3rem 1.5rem;
-    /* text-decoration: none; */
-    padding: 1.0rem 1.5rem;
-    color: #fff;
-    border: 2px solid #ddd;
-    /* z-index: 10002; */
+  display: inline-block;
+  text-align: center;
+  font-size: 1.4rem;
+  width: 20%;
+  margin: 3rem 1.5rem;
+  /* text-decoration: none; */
+  padding: 1rem 1.5rem;
+  color: #fff;
+  border: 2px solid #ddd;
+  /* z-index: 10002; */
 }
 
 @media screen and (max-width: 768px) {
-    .intro-links {
-        width: 30%;
-        margin: 1.2rem;
-    }
+  .intro-links {
+    width: 30%;
+    margin: 1.2rem;
+  }
 }
 
 @media screen and (max-width: 520px) {
-    .intro-links {
-        width: 70%;
-        margin: 1.2rem;
-    }
+  .intro-links {
+    width: 70%;
+    margin: 1.2rem;
+  }
 }
 
 .intro-links:hover {
-    background-color: rgba(255,255,255,0.3);
-    color: #fff;
-    transition: background-color 0.3s ease-in-out;
+  background-color: rgba(255, 255, 255, 0.3);
+  color: #fff;
+  transition: background-color 0.3s ease-in-out;
 }
 
 .intro-links:visited {
-    color: #fff;
+  color: #fff;
 }
 
 .headings {
-    margin-top: 1rem;
-    background-color: rgb(109, 85, 53);
-    font-weight: 575;
-    padding: 1.5rem;
-    color: #e5e5e5;
-    text-align: center;
-    font-family: 'Bree Serif'
+  margin-top: 1rem;
+  background-color: rgb(109, 85, 53);
+  font-weight: 575;
+  padding: 1.5rem;
+  color: #e5e5e5;
+  text-align: center;
+  font-family: "Bree Serif";
 }
 
 .sub-headings {
-    font-weight: 540;
-    font-family: 'Maiden Orange';
+  font-weight: 540;
+  font-family: "Maiden Orange";
 }
 
 /* Auto-resize image */
 .img {
-    max-width: 100%;
-    height: auto;
-    width: 40rem;
+  max-width: 100%;
+  height: auto;
+  width: 40rem;
 }
 
 @media screen and (min-width: 768px) {
-    .detail-img {
-        transform: translateY(50%);
-    }
+  .detail-img {
+    transform: translateY(50%);
+  }
 }
 
 @media screen and (max-width: 768px) {
-    .detail-img {
-        margin-top: 3rem;
-    }
+  .detail-img {
+    margin-top: 3rem;
+  }
 }
 
 /* Auto-resize video */
 .detail-vid {
-    max-width: 100%;
-    /* height: auto; */
-    /* width: auto; */
+  max-width: 100%;
+  /* height: auto; */
+  /* width: auto; */
 }
 
 @media screen and (min-width: 768px) {
-    .detail-vid {
-        transform: translateY(50%);
-    }
+  .detail-vid {
+    transform: translateY(50%);
+  }
 }
 
 @media screen and (max-width: 768px) {
-    .detail-vid {
-        margin-top: 3rem;
-    }
+  .detail-vid {
+    margin-top: 3rem;
+  }
 }
 
 .video-container {
-    position: relative;
-    padding-bottom: 56.25%;
-    padding-top: 30px; height: 0; overflow: hidden;
-    }
-    
+  position: relative;
+  padding-bottom: 56.25%;
+  padding-top: 30px;
+  height: 0;
+  overflow: hidden;
+}
+
 .video-container iframe,
 .video-container object,
 .video-container embed {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    }
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
 
 .details {
-    font-size: 1.4rem;
-    margin-top: 2rem;
-    text-align: left;
+  font-size: 1.4rem;
+  margin-top: 2rem;
+  text-align: left;
 }
 
 ul {
-    font-size: 1.4rem;
-    text-align: left;
+  font-size: 1.4rem;
+  text-align: left;
 }
 
 .detail-links {
-    display: inline-block;
-    text-align: center;
-    font-size: 1.4rem;
-    color: #fff;
-    width: 30%;
-    margin: 4rem 1.5rem;
-    padding: 1rem 0.5rem;
-    border-radius: 1.5rem;
+  display: inline-block;
+  text-align: center;
+  font-size: 1.4rem;
+  color: #fff;
+  width: 30%;
+  margin: 4rem 1.5rem;
+  padding: 1rem 0.5rem;
+  border-radius: 1.5rem;
 }
 
 @media screen and (max-width: 885px) {
-    .detail-links {
-        width: 40%;
-        padding: 1rem 0.2rem;
-    }
+  .detail-links {
+    width: 40%;
+    padding: 1rem 0.2rem;
+  }
 }
 
 @media screen and (max-width: 480px) {
-    .detail-links {
-        width: 40%;
-        border-radius: 1rem;
-        padding: 1rem 0.2rem;
-        margin: 5rem 0.5rem 4rem 0.5rem;
-    }
+  .detail-links {
+    width: 40%;
+    border-radius: 1rem;
+    padding: 1rem 0.2rem;
+    margin: 5rem 0.5rem 4rem 0.5rem;
+  }
 }
 
 /* Single Button extends & overwrites detail links */
 .single {
-    width: 60%;
+  width: 60%;
 }
 
 .web-template {
-    margin-top: 3rem;
-    margin-bottom: 3rem;
+  margin-top: 3rem;
+  margin-bottom: 3rem;
 }
 
 .skills-section {
-    padding: 3rem 4rem;
-    text-align: left !important;
-    font-size: 1.6rem;
+  padding: 3rem 4rem;
+  text-align: left !important;
+  font-size: 1.6rem;
 }
 
 @media screen and (max-width: 768px) {
-    .skills-section {
-        padding: 5rem;
-    }
+  .skills-section {
+    padding: 5rem;
+  }
 }
 
 @media screen and (max-width: 480px) {
-    .skills-section {
-        padding: 4rem 1.5rem;
-    }
+  .skills-section {
+    padding: 4rem 1.5rem;
+  }
 }
 
 /* Adds Extra Padding in between skill cols */
 .skill-sep {
-    padding: 0 3rem;
+  padding: 0 3rem;
 }
 
 @media screen and (max-width: 768px) {
-    .skill-sep {
-        padding: 0 1.5rem;
-    }
+  .skill-sep {
+    padding: 0 1.5rem;
+  }
 }
 
 .progress {
-    background-color: rgb(241, 231, 229);
+  background-color: rgb(241, 231, 229);
 }
 
 .progress-bar {
-    width: 0;
+  width: 0;
 }
 
 .skill-visible {
-    animation: progress 1.5s ease-in-out forwards;
+  animation: progress 1.5s ease-in-out forwards;
 }
 
 @keyframes progress {
-    from {
-      width: 0;
-    }
-    to {
-      width: 100%;
-    }
+  from {
+    width: 0;
   }
+  to {
+    width: 100%;
+  }
+}
 
 .card-box {
-    border: solid 1px #ddd;
-    border-radius: 1rem;
-    box-shadow: 0.1rem 0.2rem #ddd;
-    padding: 1rem;
-    margin-top: 3rem;
-    margin-bottom: 3rem;
-    height: 40rem;
-    background-color: #f5efe7;
+  border: solid 1px #ddd;
+  border-radius: 1rem;
+  box-shadow: 0.1rem 0.2rem #ddd;
+  padding: 1rem;
+  margin-top: 3rem;
+  margin-bottom: 3rem;
+  height: 40rem;
+  background-color: #f5efe7;
 }
 
 @media screen and (max-width: 768px) {
-    .card-box {
-        height: initial;
-    }
+  .card-box {
+    height: initial;
+  }
 }
 
 /* -webkit-clip-path: polygon(50% 100%, 100% 85%, 100% 100%, 0 100%, 0 85%);
@@ -342,161 +345,161 @@ clip-path: polygon(50% 100%, 100% 85%, 100% 100%, 0 100%, 0 85%); */
 
 /* Text overflow ellipsis after 4 lines */
 .ellipsis {
-    padding: 0 1rem;
-    text-align: justify;
-    -webkit-line-clamp: 4;
-    display: -webkit-box;
-    -webkit-box-orient: vertical;
-    overflow: hidden;
-    text-overflow: ellipsis;
+  padding: 0 1rem;
+  text-align: justify;
+  -webkit-line-clamp: 4;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 @media screen and (max-width: 480px) {
-    .ellipsis {
-        -webkit-line-clamp: 6;
-    }
+  .ellipsis {
+    -webkit-line-clamp: 6;
+  }
 }
 
 .card-box a {
-    color: #000;
+  color: #000;
 }
 
 .row {
-    display: inline-block;
-    text-align: center;
-    background-color: #fff;
-    margin-top: 1rem;
-    margin-bottom: 4rem;
-    width: 90%;
-    box-shadow: 3px 2px 5px rgb(121, 54, 9);
+  display: inline-block;
+  text-align: center;
+  background-color: #fff;
+  margin-top: 1rem;
+  margin-bottom: 4rem;
+  width: 90%;
+  box-shadow: 3px 2px 5px rgb(121, 54, 9);
 }
 
 @media screen and (min-width: 1200px) {
-    /* show reverse by horizontal row */
-    .row {
-        width: 85%;
-    }
+  /* show reverse by horizontal row */
+  .row {
+    width: 85%;
+  }
 }
 
 @media screen and (min-width: 1600px) {
-    /* show reverse by horizontal row */
-    .row {
-        width: 75%;
-    }
+  /* show reverse by horizontal row */
+  .row {
+    width: 75%;
+  }
 }
 
 @media screen and (min-width: 1900px) {
-    /* show reverse by horizontal row */
-    .row {
-        width: 70%;
-    }
+  /* show reverse by horizontal row */
+  .row {
+    width: 70%;
+  }
 }
 
 @media screen and (max-width: 768px) {
-    /* show reverse by horizontal row */
-    .row {
-        width: 95%;
-    }
+  /* show reverse by horizontal row */
+  .row {
+    width: 95%;
+  }
 }
 
 @media screen and (max-width: 400px) {
-    /* show reverse by horizontal row */
-    .row {
-        width: 98%;
-    }
+  /* show reverse by horizontal row */
+  .row {
+    width: 98%;
+  }
 }
 
 @media screen and (min-width: 768px) {
-    /* show reverse by horizontal row */
-    .row-reverse { 
-        display: inline-flex; 
-        flex-direction: row-reverse; 
-        padding: 1rem;
-    }
+  /* show reverse by horizontal row */
+  .row-reverse {
+    display: inline-flex;
+    flex-direction: row-reverse;
+    padding: 1rem;
+  }
 }
 
 /* Clip path arrow for footer */
 .arrow {
-    -webkit-clip-path: polygon(50% 99%, 100% 60%, 100% 100%, 0 100%, 0 60%);
-    clip-path: polygon(50% 99%, 100% 60%, 100% 100%, 0 100%, 0 60%);
-    background-color: #3C2F1D;
-    height: 20rem;
-    margin-top: -10rem;
+  -webkit-clip-path: polygon(50% 99%, 100% 60%, 100% 100%, 0 100%, 0 60%);
+  clip-path: polygon(50% 99%, 100% 60%, 100% 100%, 0 100%, 0 60%);
+  background-color: #3c2f1d;
+  height: 20rem;
+  margin-top: -10rem;
 }
 
 @media screen and (max-width: 480px) {
-    .arrow {
-        height: 10rem;
-        margin-top: -5rem;
-    }
+  .arrow {
+    height: 10rem;
+    margin-top: -5rem;
+  }
 }
 
 /* Add a gray background color and some padding to the footer */
 footer {
-    margin-top: -0.1rem;
-    background-color: #3C2F1D;
-    padding: 0 10rem !important;
-    padding-bottom: 2rem !important;
-    color: #fff;
+  margin-top: -0.1rem;
+  background-color: #3c2f1d;
+  padding: 0 10rem !important;
+  padding-bottom: 2rem !important;
+  color: #fff;
 }
 
 @media screen and (max-width: 768px) {
-    footer {
-        padding: 3rem 4rem !important;
-    }
+  footer {
+    padding: 3rem 4rem !important;
+  }
 }
 
 footer a {
-    color: #fff;
-    text-decoration: underline;
+  color: #fff;
+  text-decoration: underline;
 }
 
 footer a:visited {
-    color: #ddd;
+  color: #ddd;
 }
 
 footer a:hover {
-    color: #eee;
+  color: #eee;
 }
 
 footer a:focus {
-    color: #ddd;
+  color: #ddd;
 }
 
 .icon {
-    margin-top: 2rem;
-    margin-right: 2rem;
-    font-size: 2rem;
+  margin-top: 2rem;
+  margin-right: 2rem;
+  font-size: 2rem;
 }
 
 .about {
-    display: inline-block;
-    width: 40%;
+  display: inline-block;
+  width: 40%;
 }
 
 .contact {
-    display: block;
-    width: 35%;
-    float: right;
+  display: block;
+  width: 35%;
+  float: right;
 }
 
 @media screen and (max-width: 768px) {
-    .about {
-        width: 100%;
-        text-align: center;
-        margin-bottom: 2rem;
-    }
+  .about {
+    width: 100%;
+    text-align: center;
+    margin-bottom: 2rem;
+  }
 
-    .about .details {
-        text-align: center;
-    }
-    
-    .contact {
-        width: 100%;
-        text-align: center;
-    }
+  .about .details {
+    text-align: center;
+  }
 
-    .contact .details {
-        text-align: center;
-    }
+  .contact {
+    width: 100%;
+    text-align: center;
+  }
+
+  .contact .details {
+    text-align: center;
+  }
 }
