--- a/css/style.css
+++ b/css/style.css
@@ -176,6 +176,21 @@ a:focus {
   width: 40rem;
 }
 
+.fade-in {
+    animation-name: fadeIn;
+    animation-duration: 1.5s;
+    /* animation-timing-function: cubic-bezier(0, 0, 0.4, 1); */
+    animation-fill-mode: forwards;
+  }
+  @keyframes fadeIn {
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 1;
+    }
+  }
+
 @media screen and (min-width: 768px) {
   .detail-img {
     transform: translateY(50%);
