--- a/css/style.css
+++ b/css/style.css
@@ -395,7 +395,7 @@ clip-path: polygon(50% 100%, 100% 85%, 100% 100%, 0 100%, 0 85%); */
   margin-top: 1rem;
   margin-bottom: 4rem;
   width: 90%;
-  box-shadow: 3px 2px 5px rgb(121, 54, 9);
+  box-shadow: 3px 2px 5px #0A2463;
 }
 
 @media screen and (min-width: 1200px) {
